--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -28,8 +28,9 @@
 
 
     <Button
+        android:layout_alignParentLeft="true"
         android:id="@+id/btnAdd"
-        android:layout_width="72dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="+"
@@ -39,9 +40,10 @@
         />
 
     <Button
+
         android:layout_toRightOf="@+id/btnAdd"
         android:id="@+id/btnMin"
-        android:layout_width="72dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="-"
@@ -52,7 +54,7 @@
     <Button
         android:layout_toRightOf="@+id/btnMin"
         android:id="@+id/btnX"
-        android:layout_width="72dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="X"
@@ -61,9 +63,11 @@
         android:textColor="#fff8f8" />
 
     <Button
+
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/btnX"
         android:id="@+id/btnBagi"
-        android:layout_width="72dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text=":"
@@ -72,15 +76,13 @@
         android:textColor="#fff8f8" />
 
     <Button
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/btnBagi"
+        android:layout_marginTop="20dp"
         android:id="@+id/btnC"
-        android:layout_width="91dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="C"
-        android:layout_below="@+id/edtBilangan2"
+        android:layout_below="@+id/btnAdd"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimaryDark" />
 
